# segtools

./: .readthedocs.yaml  INSTALL  NEWS  debug.py  environment.yml  install.R  install.py  install.tmpl  pyproject.toml  setup.cfg  setup.py
R/: README
R/segtools/: R
doc/: Makefile  conf.py  gethelp.py  introduction.rst  segtools.rst
segtools/: __init__.py  aggregation.py  bed.py  bed_compare.py  common.py  compare.py  feature_aggregation.py  feature_distance.py  flatten.py  flatten_bed.py  gff.py  gmtk_parameters.py  html.py  label_transition.py  length_distribution.py  mnemonics.py  nucleotide_frequency.py  overlap.py  pickle_segmentation.py  preprocess.py  relabel.py  signal_distribution.py  test_bed_compare.py  test_overlap.py  transition.py  validate_all.py
segtools/R/: aggregation.R  common.R  dinucleotide.R  distance.R  length.R  overlap.R  signal.R  track_statistics.R  transition.R
segtools/resources/: aggregation_gene_div.tmpl  gmtk_div.tmpl  html_footer.tmpl  overlap_div.tmpl  signal_div.tmpl
test/: test_feature_distance.py  test_overlap.py
