[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "Michael Hoffman", email = "michael.hoffman@utoronto.ca"}]
classifiers = [
  "Natural Language :: English",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
]
# Exclude PyTables 3.4.1 - incorrect binary distribution causes core dumps
# See:
# https://bitbucket.org/hoffmanlab/genomedata/issues/38/pytables-341-causes-a-core-dump-when
dependencies = ["numpy>=1.3", "rpy2>=2.6.0", "six", "textinput"]
description = "tools for exploratory analysis of genomic segmentations"
dynamic = ["version"]
maintainers = [{name = "Michael Hoffman", email = "michael.hoffman@utoronto.ca"}]
name = "segtools"
readme = "README.rst"
requires-python = ">=3.7"

[project.license]
text = "GPL-2.0-only"

[project.optional-dependencies]
genomedata = ["genomedata"]

[project.urls]
"Bug Tracker" = "https://github.com/hoffmangroup/segtools/issues"
"Download" = "https://pypi.python.org/pypi/segtools"
"Homepage" = "https://hoffmanlab.org/proj/segtools"

# TODO: Check optional genomedata dependencies to see if they are checked or this is the right syntax
[project.scripts]
segtools-aggregation = "segtools.aggregation:main"
segtools-compare = "segtools.compare:main"
segtools-feature-distance = "segtools.feature_distance:main"
segtools-flatten = "segtools.flatten:main"
segtools-gmtk-parameters = "segtools.gmtk_parameters:main"
segtools-html-report = "segtools.html:main"
segtools-length-distribution = "segtools.length_distribution:main"
segtools-nucleotide-frequency = "segtools.nucleotide_frequency:main [genomedata]"
segtools-overlap = "segtools.overlap:main"
segtools-preprocess = "segtools.preprocess:main"
segtools-relabel = "segtools.relabel:main"
segtools-signal-distribution = "segtools.signal_distribution:main [genomedata]"
segtools-transition = "segtools.transition:main"

[tool.setuptools]
# Override setuptools autodiscovery algorithm
packages = ["segtools"]

# Enable version inference from scm
[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true
